--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -112,7 +112,7 @@
         <li><a href="https://last.fm/user/{{ author.lastfm }}"><i class="fab fa-fw fa-lastfm icon-pad-right" aria-hidden="true"></i>Last.fm</a></li>
       {% endif %}      
      
-       <a href="https://www.linkedin.com/in/theo-emmerich-023143107" target="_blank" rel="noopener noreferrer">
+       <a href="https://www.linkedin.com/in/théo-emmerich-023143107" target="_blank" rel="noopener noreferrer">
       <i class="fab fa-linkedin"></i> LinkedIn
        </a>
     
