--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,6 +2,9 @@
 
 <!-- start custom head snippets -->
 
+<!-- Canonical URL for SEO -->
+<link rel="canonical" href="{{ page.url | absolute_url }}">
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8SLSNW9N3G"></script>
 <script>
